Update to cron job (#2154)